# faraday

./: Dockerfile.main  Dockerfile.sandbox  LICENSE  README.md  faraday.docker.yaml  faraday.example.yaml  pyproject.toml  setup.py
.github/workflows/: deploy-docs.yml  publish.yml
docs-astro/: README.md
examples/configs/: batch-literature-queries.yaml  batch-queries.yaml  docker.yaml  research-report-pdf.yaml  single-query.yaml
faraday/: cli.py  faraday_agent.py  openai_clients.py
faraday/agents/: code_execution_agent.py  config_datamodel.py
faraday/agents/execution/: __init__.py  bash_executor.py  filesystem_state.py  hotfix.py  models.py  output_sync.py  process_runner.py  python_executor.py  runtime.py  tool_specs.py
faraday/agents/sandbox/: __init__.py  base.py  config.py  docker_backend.py  docker_memory.py  legacy.py  local_backend.py  modal_backend.py  packages.py  repl.py
faraday/agents/tests/: test_code_execution.py  test_docker_backend.py  test_legacy.py  test_sandbox_config.py  test_workspace_init.py
faraday/biomodels/deployment/: boltz_modal.py
faraday/config/: __init__.py  runtime_config.py  test_runtime_config.py
faraday/integrations/harbor/: __init__.py  agent.py  runtime.py
faraday/logging/: atif_writer.py  updates.py  usage_tracking.py
faraday/prompts/: agent_system_prompt.py  agent_system_prompt_initial.py
faraday/search/: __init__.py
faraday/search/documents/: search_paper_workflows.py
faraday/storage/: __init__.py  base.py  factory.py  sqlite_backend.py
faraday/utils/: summarize_utils.py
(+7 files in other folders)
